--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: ankit1khare@gmail.com
   facebook:
   flickr:
   github: ankit1khare
   instagram:
-  linkedin:
+  linkedin: deeplearnerak
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
