--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ankit Khare
 description: Deep Learning Researcher from Arlington, TX, USA
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://media.licdn.com/dms/image/C4E03AQGxoYPccXeStw/profile-displayphoto-shrink_800_800/0?e=1553731200&v=beta&t=DPU4i4DLl2T9fHHnyJby5Mj3LJkQe_isDB7hM0NOEuQ
 
 #
 # Flags below are optional
