--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Ankit Khare
 
 # Short bio or description (displayed in the header)
-description: Deep Learning Researcher from Arlington, TX, USA
+description: Deep Learning Enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://media.licdn.com/dms/image/C4E03AQGxoYPccXeStw/profile-displayphoto-shrink_800_800/0?e=1553731200&v=beta&t=DPU4i4DLl2T9fHHnyJby5Mj3LJkQe_isDB7hM0NOEuQ
